@@ -45,6 +45,8 @@ Alan Ezust, and Dale Anson for contributing to this release.
 }}}
 {{{ Miscellaneous
 
+- Added new method JEditBuffer.hasProperty() (Matthieu Casanova)
+
 - Apply UI language changes immediately without the need to restart.
   (Björn "Vampire" Kautler)
 
